--- a/public/about.html
+++ b/public/about.html
@@ -75,7 +75,7 @@
   overflow: hidden;
 }
 
-.flip-container2:hover .indiphotos, .flip-container2.hover .indiphotos {
+.flip-container2:hover .indiphotos, .flip-container2:active .indiphotos, .flip-container2.hover .indiphotos {
     transform: rotateY(180deg);
   }
 
@@ -279,7 +279,7 @@
 
     <h1 id="name">ABOUT US</h1>
     <div id = "EMphotos">
-      <div class="flip-container jenn" ontouchstart="this.classList.toggle('hover');">
+      <div class="flip-container jenn">
         <div class = "indiphotos">
           <div class = front><img class = "EBPhoto" id = "leo" src = "images/jl.jpg"></div>
           <div class = "back red">
@@ -287,7 +287,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-container jasper" ontouchstart="this.classList.toggle('hover');">
+      <div class="flip-container jasper">
         <div class = "indiphotos">
           <div class = front><img class = "EBPhoto" src = "images/jp.png"></div>
           <div class = "back blue">
@@ -295,7 +295,7 @@
           </div>
         </div>
       </div>
-      <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+      <div class="flip-container">
         <div class = "indiphotos">
           <div class = front><img class = "EBPhoto" src = "images/mf.jpg"></div>
           <div class = "back red">
@@ -303,7 +303,7 @@
           </div>
         </div>
       </div>
-      <div class = "flip-container kevin" ontouchstart="this.classList.toggle('hover');">
+      <div class = "flip-container kevin">
         <div class = "indiphotos">
           <div class = front><img class = "EBPhoto" src = "images/kb.jpg"></div>
           <div class = "back blue">
