--- a/public/tisch.html
+++ b/public/tisch.html
@@ -23,10 +23,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <script>
-    MTWTh_percentage = {8:10,9:15,10:21,11:32,12:40,13:45,14:48,15:50,16:53,17:55,18:56,19:57,20:56,21:47,40:60,23:31,24:20,0:10,1:10}
+    MTWTh_percentage = {8:10,9:15,10:21,11:32,12:40,13:45,14:48,15:50,16:53,17:55,18:56,19:57,20:56,21:47,40:60,23:31,0:20,1:10}
     F_percentage = {8:5,9:8,10:10,11:14,12:14,13:15,14:15,15:18,16:22,17:26,18:30,19:34,20:38,21:35}
     Sa_percentage = {10:0,11:10,12:15,13:20,14:30,15:34,16:40,17:45,18:55,19:54,20:38,21:35,22:35}
-    Su_percentage = {10:16,11:25,12:40,13:45,14:50,15:52,16:50,17:50,18:45,19:38,20:30,21:25,22:20,23:10,24:10,0:10,1:10}
+    Su_percentage = {10:16,11:25,12:40,13:45,14:50,15:52,16:50,17:50,18:45,19:38,20:30,21:25,22:20,23:10,0:10,1:10}
     $( document ).ready(function() {
       date = new Date();
       var close = document.getElementById("timecloseData");
@@ -36,7 +36,7 @@
       var percentage = document.getElementById("percentageData");
       var bat_image = document.getElementById("bat_image");
       var day = date.getDay();
-      var hour = 2; //date.getHours();
+      var hour = date.getHours();
 
       //if Friday
       if(day == 5) {
@@ -239,7 +239,7 @@
   </div>
 
 
-<script type="text/javascript" src="/js/detail.js"></script>
+<script type="text/javascript" src="/js/detail_tisch.js"></script>
 <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 </body>
