--- a/public/carm_subform.html
+++ b/public/carm_subform.html
@@ -10,7 +10,7 @@
 <body>
         <p id="date"></p>
         <form action="/submit" method="post">
-                <input type="radio" name="location" value="Eaton" checked> Eaton<br>
+                <input type="radio" name="location" value="Carmichael" checked> Carmichael<br>
                 10:00AM:
                 <input type="text" name="tenAM"><br>
                 11:00AM:
@@ -49,7 +49,7 @@
         </form>
 
         <script>
-                document.getElementById("date").innerHTML = "Eaton Submission for: " + Date();
+                document.getElementById("date").innerHTML = "Carmichael Submission for: " + Date();
         </script>
 </body>
 </html>
