--- a/public/dewick.html
+++ b/public/dewick.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>     
+<head>
   <title>Busy Monitor</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -221,7 +221,7 @@
   <script>get_menu('dewick');</script>
   <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
-   
-  <script type="text/javascript" src="/js/detail.js"></script>
+
+  <script type="text/javascript" src="/js/detail_dewick.js"></script>
 
 </html>
