--- a/public/about.html
+++ b/public/about.html
@@ -86,7 +86,7 @@
 
 }
   /* flip the pane when hovered */
-  .flip-container:hover .indiphotos, .flip-container.hover .indiphotos {
+  .flip-container:hover .indiphotos, .flip-container:active .indiphotos, .flip-container.hover .indiphotos {
     transform: rotateY(180deg);
   }
 
