--- a/public/eaton.html
+++ b/public/eaton.html
@@ -167,7 +167,7 @@
     </div>
   </div>
 
-<script type="text/javascript" src="/js/detail.js"></script>
+<script type="text/javascript" src="/js/detail_eaton.js"></script>
 <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
 <script type="text/javascript" src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
 </body>
